--- a/static/css/main.less
+++ b/static/css/main.less
@@ -84,7 +84,7 @@ table tbody tr:hover {
     }
 
     .month-buttons .mui-flat-button {
-        min-width: auto;
+        min-width: 0;
     }
 
     .month-buttons .nav {
